# cov-test-1212313

./: .pre-commit-config-pr.yaml  .pre-commit-config-push.yaml  .pre-commit-config.yaml  3536  3537  3539  3540  3541  3542  3543  3544  3545  635  README.md  azure-pipelines.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml  extract_coverage.py
.github/actions/: action.yml
.github/actions/setup-python-env/: action.yml
.github/scripts/: extract_coverage.py
.github/workflows/: ci.yml  docs.yml  pr-precommit.yml  publish.yml
docs/: conf.py  index.md  readme.md
testmodule/: __init__.py  operations.py
tests/: test_operations.py
