[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testmodule"]

[project]
name = "cov-test-1212313"
version = "0.1.0"
description = "A simple test module with basic mathematical operations"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Test Author", email = "test@example.com"}
]
keywords = ["test", "coverage", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "nox>=2023.4.0",
]

[project.urls]
Homepage = "https://github.com/zEdS15B3GCwq/cov-test-1212313"
Repository = "https://github.com/zEdS15B3GCwq/cov-test-1212313"

[tool.ruff]
target-version = "py314"
