[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testmodule"]

[project]
name = "cov-test-1212313"
version = "0.1.2"
description = "A simple test module with basic mathematical operations"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Test Author", email = "test@example.com"}
]
keywords = ["test", "coverage", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/zEdS15B3GCwq/cov-test-1212313"
Repository = "https://github.com/zEdS15B3GCwq/cov-test-1212313"

[tool.ruff]
target-version = "py314"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
# exclude_files not working yet in numpydoc_validation
exclude_files = [ # don't process filepaths that match these regex
    "^./noxfile.py",
]
